--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "superbalist/laravel-prometheus-exporter",
+  "name": "storyblocks/laravel-prometheus-exporter",
   "description": "A prometheus exporter for Laravel",
   "license": "MIT",
   "authors": [
@@ -11,8 +11,7 @@
   "require": {
     "php": ">=5.6.0",
     "illuminate/support": "^5.3 || ^6.0 || ^7.0",
-    "illuminate/routing": "^5.3 || ^6.0 || ^7.0",
-    "jimdo/prometheus_client_php": "^0.9.0"
+    "illuminate/routing": "^5.3 || ^6.0 || ^7.0"
   },
   "autoload": {
     "psr-4": {
