--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   "require": {
     "php": ">=5.6.0",
     "illuminate/support": "^5.3 || ^6.0 || ^7.0",
-    "illuminate/routing": "^5.3 || ^6.0 || ^7.0"
+    "illuminate/routing": "^5.3 || ^6.0 || ^7.0":
   },
   "autoload": {
     "psr-4": {
@@ -21,7 +21,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "1.0-dev"
+      "dev-master": "1.1-dev"
     },
     "laravel": {
       "providers": [
